<resources>
    <string name="app_name">calculator</string>
    <string name="clear_btn">C</string>
    <string name="del_last_btn">&lt;&lt;</string>
    <string name="percent_btn">%</string>
    <string name="zero_btn">0</string>
    <string name="one_btn">1</string>
    <string name="two_btn">2</string>
    <string name="three_btn">3</string>
    <string name="four_btn">4</string>
    <string name="five_btn">5</string>
    <string name="six_btn">6</string>
    <string name="seven_btn">7</string>
    <string name="eight_btn">8</string>
    <string name="nine_btn">9</string>
    <string name="dot_btn">.</string>
    <string name="result_btn">=</string>
    <string name="division_btn">&#247;</string>
    <string name="multipl_btn">&#215;</string>
    <string name="plus_btn">+</string>
    <string name="minus_btn">-</string>
    <string name="digits_field_default">0</string>
    <string name="result">=%1$s</string>
    <string name="left_delim">(</string>
    <string name="right_delim">)</string>
    <string name="error">Error</string>
    <string name="clear">clear</string>
</resources>
